--- a/news.html
+++ b/news.html
@@ -36,7 +36,7 @@
       
       <ul class="news-list list">
         <li class="news-item">
-          <a href="" class="news-link">
+          <a href="./newsCard.html" class="news-link">
             <img src="./img/news1.png" alt="house" class="news-img" />
             <p class="news-date">Man. 31. okt</p>
             <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
