om oss benifites

--- a/newsCard.html
+++ b/newsCard.html
@@ -22,7 +22,7 @@
             <a href="./projects.html">Prosjekter</a>
           </li>
           <li class="nav-item">
-            <a href="">Om oss</a>
+            <a href="./about.html">Om oss</a>
           </li>
           <li class="nav-item">
             <a href="./news.html" class="accent-border">Nyheter</a>
@@ -88,9 +88,6 @@
             Boligene på Salentunet får ikke bare utsikt til sjøen – de får havet
             som nærmeste nabo.
           </p>
-        </div>
-
-       
       </div>
     </div>
 
