--- a/projectCard.html
+++ b/projectCard.html
@@ -22,7 +22,7 @@
             <a href="./projects.html" class="accent-border">Prosjekter</a>
           </li>
           <li class="nav-item">
-            <a href="">Om oss</a>
+            <a href="./about.html">Om oss</a>
           </li>
           <li class="nav-item">
             <a href="./news.html">Nyheter</a>
