--- a/news.html
+++ b/news.html
@@ -18,7 +18,7 @@
           <a href="./projects.html">Prosjekter</a>
         </li>
         <li class="nav-item"> 
-          <a href="">Om oss</a>
+          <a href="./about.html">Om oss</a>
         </li>
         <li class="nav-item">
           <a href="./news.html" class="accent-border">Nyheter</a>
