--- a/about.html
+++ b/about.html
@@ -75,6 +75,19 @@
                     </p>
                 </li>
             </ul>
+
+            <img src="./img/about-house.png" alt="house">
+
+            <div>
+                <div>
+                    <h3>Helhetlig uttrykk h2</h3>
+                    <p>Vårt team har bred kunnskap i eiendomsdannelse, i det vektlegger vi – eiendoms-, miljø- og planleggings juss, eiendomsøkonomi og byplanlegging. Vi ser eiendomsutvikling som en tverrfaglig profesjon, herunder – fasilitetsstyring, strategisk arealforvaltning, identifisering av bruker og virksomhetsbehov, samt evaluering av brukskvalitet med tilhørende teorier, metoder og verktøy.</p>
+                </div>
+                <div>
+                    <h3>Helhetlig uttrykk h2</h3>
+                    <p>Når vi starter et prosjekt, tar vi utgangspunkt i virksomhetens målsettinger og behov.</p>
+                </div>
+            </div>
         </div>
       <div class="partners">
         <h3>Våre Samarbeidspartnere</h3>
