--- a/about.html
+++ b/about.html
@@ -18,77 +18,92 @@
             <a href="./projects.html">Prosjekter</a>
           </li>
           <li class="nav-item">
-            <a href="">Om oss</a>
+            <a href="./about.html" class="accent-border">Om oss</a>
           </li>
           <li class="nav-item">
             <a href="./news.html">Nyheter</a>
           </li>
           <li class="nav-item">
-            <a href="./contacts.html" class="accent-border">Kontakt</a>
+            <a href="./contacts.html" >Kontakt</a>
           </li>
         </ul>
       </div>
     </header>
 
     <div class="page-title">
-        <div class="conteiner">
-            <img src="./img/about-apartment.png" alt="apartment">
-      <div class="about__title-conteiner">
-        
-        <h1 class="about__title">Om oss</h1>
-      <p>
-        Odin Eiendom jobber målrettet med stort fokus på tilrettelegging,
-        forhandling, koordinering og planlegging.
-      </p>
-      </div>
+      <div class="conteiner">
+        <img src="./img/about-apartment.png" alt="apartment" />
+        <div class="about__title-conteiner">
+          <h1 class="about__title">Om oss</h1>
+          <p>
+            Odin Eiendom jobber målrettet med stort fokus på tilrettelegging,
+            forhandling, koordinering og planlegging.
+          </p>
         </div>
+      </div>
     </div>
 
     <div class="conteiner about__conteiner">
-        <div class="about__benefits">
-            <ul class="about__benefits-list">
-                <li class="about__benefits-item">
-                    <svg width="94" height="94">
-                        <use href="./svg/symbol-defs.svg#tools"></use>
-                    </svg>
-                    <b>La fagfolk gjøre jobben</b>
-                    <p>For å sikre at jobben gjøres riktig, og for å unngå overraskelser er det alltid best å la fagfolk gjøre jobben.
+      <div class="about__benefits">
+        <ul class="about__benefits-list">
+          <li class="about__benefits-item">
+            <svg width="94" height="94">
+              <use href="./svg/symbol-defs.svg#tools"></use>
+            </svg>
+            <p>La fagfolk gjøre jobben</p>
+            <p class="about__benefits-description">
+              For å sikre at jobben gjøres riktig, og for å unngå overraskelser
+              er det alltid best å la fagfolk gjøre jobben.
+            </p>
+          </li>
+          <li class="about__benefits-item">
+            <svg width="117" height="117">
+              <use href="./svg/symbol-defs.svg#smile"></use>
+            </svg>
+            <p>La fagfolk gjøre jobben</p>
+            <p class="about__benefits-description">
+              For å sikre at jobben gjøres riktig, og for å unngå overraskelser
+              er det alltid best å la fagfolk gjøre jobben.
+            </p>
+          </li>
+          <li class="about__benefits-item">
+            <svg width="109" height="110">
+              <use href="./svg/symbol-defs.svg#list"></use>
+            </svg>
+            <p>La fagfolk gjøre jobben</p>
+            <p class="about__benefits-description">
+              For å sikre at jobben gjøres riktig, og for å unngå overraskelser
+              er det alltid best å la fagfolk gjøre jobben.
+            </p>
+          </li>
+        </ul>
 
-                    </p>
-                </li>
-                <li class="about__benefits-item">
-                    <svg width="117" height="117">
-                        <use href="./svg/symbol-defs.svg#smile"></use>
-                    </svg>
-                    <b>La fagfolk gjøre jobben</b>
-                    <p>For å sikre at jobben gjøres riktig, og for å unngå overraskelser er det alltid best å la fagfolk gjøre jobben.
+        <img src="./img/about-house.png" alt="house" />
 
-                    </p>
-                </li>
-                <li class="about__benefits-item">
-                    <svg width="109" height="110">
-                        <use href="./svg/symbol-defs.svg#list"></use>
-                    </svg>
-                    <b>La fagfolk gjøre jobben</b>
-                    <p>For å sikre at jobben gjøres riktig, og for å unngå overraskelser er det alltid best å la fagfolk gjøre jobben.
+        <ul class="about__housing-list">
+          <li class="about_housing-item">
+            <h3>Helhetlig uttrykk h2</h3>
+            <p>
+              Vårt team har bred kunnskap i eiendomsdannelse, i det vektlegger
+              vi – eiendoms-, miljø- og planleggings juss, eiendomsøkonomi og
+              byplanlegging. Vi ser eiendomsutvikling som en tverrfaglig
+              profesjon, herunder – fasilitetsstyring, strategisk
+              arealforvaltning, identifisering av bruker og virksomhetsbehov,
+              samt evaluering av brukskvalitet med tilhørende teorier, metoder
+              og verktøy.
+            </p>
+          </li>
+          <li class="about_housing-item">
+            <h3>Helhetlig uttrykk h2</h3>
+            <p>
+              Når vi starter et prosjekt, tar vi utgangspunkt i virksomhetens
+              målsettinger og behov.
+            </p>
+          </li>
+        </ul>
 
-                    </p>
-                </li>
-            </ul>
-
-            <img src="./img/about-house.png" alt="house">
-
-            <div>
-                <div>
-                    <h3>Helhetlig uttrykk h2</h3>
-                    <p>Vårt team har bred kunnskap i eiendomsdannelse, i det vektlegger vi – eiendoms-, miljø- og planleggings juss, eiendomsøkonomi og byplanlegging. Vi ser eiendomsutvikling som en tverrfaglig profesjon, herunder – fasilitetsstyring, strategisk arealforvaltning, identifisering av bruker og virksomhetsbehov, samt evaluering av brukskvalitet med tilhørende teorier, metoder og verktøy.</p>
-                </div>
-                <div>
-                    <h3>Helhetlig uttrykk h2</h3>
-                    <p>Når vi starter et prosjekt, tar vi utgangspunkt i virksomhetens målsettinger og behov.</p>
-                </div>
-            </div>
-        </div>
+        <img src="./img/about-teracce.png" alt="apartment with terrace">
+      </div>
       <div class="partners">
         <h3>Våre Samarbeidspartnere</h3>
         <ul class="partners__list">
