--- a/index.html
+++ b/index.html
@@ -59,42 +59,42 @@
       <h2 class="second-title">Prosjekter</h2>
       <ul class="projects-list list">
         <li class="project-item">
-          <a href="" class="project-link">
+          <a href="./projectCard.html" class="project-link">
             <img src="./img/project1.png" alt="house" class="projects-img" />
             <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
             <p class="project-date">Lansering okt 2023</p>
           </a>
         </li>
         <li class="project-item">
-          <a href="" class="project-link">
+          <a href="./projectCard.html" class="project-link">
             <img src="./img/project2.png" alt="house" class="projects-img" />
             <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
             <p class="project-date">Lansering okt 2023</p>
           </a>
         </li>
         <li class="project-item">
-          <a href="" class="project-link">
+          <a href="./projectCard.html" class="project-link">
             <img src="./img/project3.png" alt="house" class="projects-img" />
             <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
             <p class="project-date">Lansering okt 2023</p>
           </a>
         </li>
         <li class="project-item">
-          <a href="" class="project-link">
+          <a href="./projectCard.html" class="project-link">
             <img src="./img/project4.png" alt="house" class="projects-img" />
             <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
             <p class="project-date">Lansering okt 2023</p>
           </a>
         </li>
         <li class="project-item">
-          <a href="" class="project-link">
+          <a href="./projectCard.html" class="project-link">
             <img src="./img/project5.png" alt="house" class="projects-img" />
             <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
             <p class="project-date">Lansering okt 2023</p>
           </a>
         </li>
         <li class="project-item">
-          <a href="" class="project-link">
+          <a href="./projectCard.html" class="project-link">
             <img src="./img/project6.png" alt="house" class="projects-img" />
             <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
             <p class="project-date">Lansering okt 2023</p>
@@ -112,7 +112,7 @@
       <h2 class="second-title">Nyheter</h2>
       <ul class="news-list list">
         <li class="news-item">
-          <a href="" class="news-link">
+          <a href="./newsCard.html" class="news-link">
             <img src="./img/news1.png" alt="house" class="news-img" />
             <p class="news-date">Man. 31. okt</p>
             <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
@@ -124,7 +124,7 @@
           </a>
         </li>
         <li class="news-item">
-          <a href="" class="news-link">
+          <a href="./newsCard.html" class="news-link">
             <img src="./img/news1.png" alt="house" class="news-img" />
             <p class="news-date">Man. 31. okt</p>
             <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
@@ -136,7 +136,7 @@
           </a>
         </li>
         <li class="news-item">
-          <a href="" class="news-link">
+          <a href="./newsCard.html" class="news-link">
             <img src="./img/news1.png" alt="house" class="news-img" />
             <p class="news-date">Man. 31. okt</p>
             <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
@@ -148,7 +148,7 @@
           </a>
         </li>
         <li class="news-item">
-          <a href="" class="news-link">
+          <a href="./newsCard.html" class="news-link">
             <img src="./img/news1.png" alt="house" class="news-img" />
             <p class="news-date">Man. 31. okt</p>
             <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
@@ -160,7 +160,7 @@
           </a>
         </li>
         <li class="news-item">
-          <a href="" class="news-link">
+          <a href="./newsCard.html" class="news-link">
             <img src="./img/news1.png" alt="house" class="news-img" />
             <p class="news-date">Man. 31. okt</p>
             <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
@@ -172,7 +172,7 @@
           </a>
         </li>
         <li class="news-item">
-          <a href="" class="news-link">
+          <a href="./newsCard.html" class="news-link">
             <img src="./img/news1.png" alt="house" class="news-img" />
             <p class="news-date">Man. 31. okt</p>
             <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
@@ -190,6 +190,29 @@
           <use href="./svg/symbol-defs.svg#arrow"></use>
         </svg>
       </button>
+
+      <div class="cookies">
+        <div class="cookies__conteiner">
+          <div class="cookies__header">
+            <svg width="64" height="67">
+              <use href="./svg/symbol-defs.svg#smile-cookies"></use>
+            </svg>
+            <h3>We use cookies</h3>
+          </div>
+          <p>
+            We use cookies to personalise content and ads, to provide social
+            media features and to analyse our traffic. We also share information
+            about your use of our site with our social media, advertising and
+            analytics partners who may combine it with other information that
+            you’ve provided to them or that they’ve collected from your use of
+            their services.
+          </p>
+          <div class="cookies__buttons">
+            <button class="cookies__button-accept">Accept</button>
+            <button class="cookies__button-reject">Reject</button>
+          </div>
+        </div>
+      </div>
     </div>
     <footer class="footer-conteiner conteiner">
       <h2 class="second-title">Kontaktinformasjon</h2>
