--- a/news.html
+++ b/news.html
@@ -48,7 +48,7 @@
           </a>
         </li>
         <li class="news-item">
-          <a href="" class="news-link">
+          <a href="./newsCard.html" class="news-link">
             <img src="./img/news2.png" alt="house" class="news-img" />
             <p class="news-date">Man. 31. okt</p>
             <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
@@ -60,7 +60,7 @@
           </a>
         </li>
         <li class="news-item">
-          <a href="" class="news-link">
+          <a href="./newsCard.html" class="news-link">
             <img src="./img/news3.png" alt="house" class="news-img" />
             <p class="news-date">Man. 31. okt</p>
             <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
@@ -72,7 +72,7 @@
           </a>
         </li>
         <li class="news-item">
-          <a href="" class="news-link">
+          <a href="./newsCard.html" class="news-link">
             <img src="./img/news1.png" alt="house" class="news-img" />
             <p class="news-date">Man. 31. okt</p>
             <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
@@ -84,7 +84,7 @@
           </a>
         </li>
         <li class="news-item">
-          <a href="" class="news-link">
+          <a href="./newsCard.html" class="news-link">
             <img src="./img/news2.png" alt="house" class="news-img" />
             <p class="news-date">Man. 31. okt</p>
             <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
@@ -96,7 +96,7 @@
           </a>
         </li>
         <li class="news-item">
-          <a href="" class="news-link">
+          <a href="./newsCard.html" class="news-link">
             <img src="./img/news3.png" alt="house" class="news-img" />
             <p class="news-date">Man. 31. okt</p>
             <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
