--- a/projects.html
+++ b/projects.html
@@ -55,35 +55,35 @@
           </a>
         </li>
         <li class="project-item">
-          <a href="" class="project-link">
+          <a href="./projectCard.html" class="project-link">
             <img src="./img/project2.png" alt="house" class="projects-img" />
             <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
             <p class="project-date">Lansering okt 2023</p>
           </a>
         </li>
         <li class="project-item">
-          <a href="" class="project-link">
+          <a href="./projectCard.html" class="project-link">
             <img src="./img/project3.png" alt="house" class="projects-img" />
             <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
             <p class="project-date">Lansering okt 2023</p>
           </a>
         </li>
         <li class="project-item">
-          <a href="" class="project-link">
+          <a href="./projectCard.html" class="project-link">
             <img src="./img/project4.png" alt="house" class="projects-img" />
             <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
             <p class="project-date">Lansering okt 2023</p>
           </a>
         </li>
         <li class="project-item">
-          <a href="" class="project-link">
+          <a href="./projectCard.html" class="project-link">
             <img src="./img/project5.png" alt="house" class="projects-img" />
             <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
             <p class="project-date">Lansering okt 2023</p>
           </a>
         </li>
         <li class="project-item">
-          <a href="" class="project-link">
+          <a href="./projectCard.html" class="project-link">
             <img src="./img/project6.png" alt="house" class="projects-img" />
             <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
             <p class="project-date">Lansering okt 2023</p>
