--- a/contacts.html
+++ b/contacts.html
@@ -137,16 +137,16 @@
         <h3>Våre Samarbeidspartnere</h3>
         <ul class="partners__list">
           <li class="partner-item">
-            <img src="./img/partner1.png" alt="wexels" />
+            <a href=""><img src="./img/partner1.png" alt="wexels" /></a>
           </li>
           <li class="partner-item">
-            <img src="./img/partner2.png" alt="maxbo" />
+            <a href=""><img src="./img/partner2.png" alt="maxbo" /></a>
           </li>
           <li class="partner-item">
-            <img src="./img/partner3.png" alt="pbbl" />
+            <a href=""><img src="./img/partner3.png" alt="pbbl" /></a>
           </li>
           <li class="partner-item">
-            <img src="./img/partner4.png" alt="asplan viak" />
+            <a href=""><img src="./img/partner4.png" alt="asplan viak" /></a>
           </li>
         </ul>
       </div>
