--- a/projectCard.html
+++ b/projectCard.html
@@ -132,6 +132,18 @@
           <p class="options-text">Tollskogvegen IIPorsgrunn</p>
         </li>
       </ul>
+
+      <div class="project__procces-line">
+        <ul class="project__procces-list">
+          <li class="project__procces-item">
+            <svg width="18px" height="18px">
+              <use href="./svg/symbol-defs.svg#"></use>
+            </svg>
+            <span>Kv.1 2023</span>
+            <p>Lorem ipsum</p>
+          </li>
+        </ul>
+      </div>
       <div class="description-block">
         <h3 class="description-title">Litt om prosjektet</h3>
         <p class="description-text">
