--- a/projectCard.html
+++ b/projectCard.html
@@ -224,45 +224,46 @@
       </div>
     </div>
 
-    <div class="backdrop is-hidden">
+    <div class="backdrop ">
       <button class="close">
         <svg class="close-svg" width="21" height="33">
           <use href="./svg/symbol-defs.svg#close"></use>
         </svg>
       </button>
-      <div class="carousel conteiner">
-        <div class="wrapper">
-          <input checked type="radio" name="slider" id="slide1" />
-          <input type="radio" name="slider" id="slide2" />
-          <input type="radio" name="slider" id="slide3" />
-          <input type="radio" name="slider" id="slide4" />
-          <input type="radio" name="slider" id="slide5" />
-
-          <div class="slider-wrapper">
-            <div class="inner">
-              <article>
-                <img src="./img/carouselPhoto1.png" />
-              </article>
-
-              <article>
-                <img src="./img/carouselPhoto1.png" />
-              </article>
-              <article>
-                <img src="./img/carouselPhoto1.png" />
-              </article>
+      <div class="conteiner">
+        <div class="carousel">
+          <div id="slider-wrapper">
+            <input type="radio" id="button-1" name="buttons" checked="checked" />
+            <label for="button-1"></label>
+            <input type="radio" id="button-2" name="buttons" />
+            <label for="button-2"></label>
+            <input type="radio" id="button-3" name="buttons" />
+            <label for="button-3"></label>
+            <input type="radio" id="button-4" name="buttons" />
+            <label for="button-4"></label>
+            <input type="radio" id="button-5" name="buttons" />
+            <label for="button-5"></label>
+  
+            <div id="slider">
+              <ul>
+                <li id="slide1">
+                  <img src="./img/carouselPhoto1.png" alt="house" />
+                </li>
+                <li id="slide2">
+                  <img src="./img/carouselPhoto1.png" alt="house" />
+                </li>
+                <li id="slide3">
+                  <img src="./img/carouselPhoto1.png" alt="house" />
+                </li>
+                <li id="slide4">
+                  <img src="./img/carouselPhoto1.png" alt="house" />
+                </li>
+                <li id="slide5">
+                  <img src="./img/carouselPhoto1.png" alt="house" />
+                </li>
+              </ul>
             </div>
-            <!-- .inner -->
           </div>
-          <!-- .slider-wrapper -->
-
-          <div class="slider-prev-next-control">
-            <label for="slide1"></label>
-            <label for="slide2"></label>
-            <label for="slide3"></label>
-            <label for="slide4"></label>
-            <label for="slide5"></label>
-          </div>
-          <!-- .slider-prev-next-control -->
         </div>
       </div>
     </div>
