--- a/index.html
+++ b/index.html
@@ -221,11 +221,12 @@
         </div>
       </div>
     </div>
-    <footer class="footer-conteiner conteiner">
-      <h2 class="second-title">Kontaktinformasjon</h2>
+    <footer class="conteiner">
+      <div class="footer__conteiner">
+        <h2 class="second-title">Kontaktinformasjon</h2>
       <ul class="contacts-list list">
         <li class="contakts-item">
-          <p class="contacts-kind">Addrese</p>
+          <p class="footer__contacts-kind">Addrese</p>
           <address>
             <p>Odin Eiendom</p>
             <p>Lunderingen 1</p>
@@ -234,12 +235,12 @@
           </address>
         </li>
         <li class="contakts-item">
-          <p class="contacts-kind">Telefon</p>
+          <p class="footer__contacts-kind">Telefon</p>
           <p>Ma - fre 10-16</p>
           <a href="tel:45636260" class="contacts-link">45 63 62 60</a>
         </li>
         <li class="contakts-item">
-          <p class="contacts-kind">Mail</p>
+          <p class="footer__contacts-kind">Mail</p>
           <a href="malito:kontakt@odinedom.no" class="contacts-link"
             >kontakt@odinedom.no</a
           >
@@ -269,6 +270,7 @@
             ></a>
           </li>
         </ul>
+      </div>
       </div>
     </footer>
   </body>
