menu button mobile

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="header conteiner">
-      <div class="header-conteiner conteiner">
+      <div class="header-conteiner">
         <a class="logo-link" href="./index.html">
           <img class="logo-img" src="/img/Logo1.png" alt="logo" />
         </a>
@@ -248,7 +248,7 @@
       </ul>
       <div class="copyright">
         <p class="copyrigth-paragraph">
-          Copyright 2021 © Moen Eiendom - Org nr: 918712267
+          Copyright 2021 © Moen Eiendom - <span>Org nr: 918712267</span>
         </p>
         <ul class="social-list list">
           <li class="social-item">
