menu button icons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
         <button type="button" class="menu-button">
           <svg width="45" height="45">
-            <use href="./svg/symbol-defs.svg#burger"></use>
+            <use href="./svg/symbol-defs.svg#menu-button"></use>
+            <use href="./svg/symbol-defs.svg#cross"></use>
           </svg>
         </button>
 
