--- a/newsCard.html
+++ b/newsCard.html
@@ -17,20 +17,28 @@
         <a class="logo-link" href="./index.html">
           <img class="logo-img" src="/img/Logo1.png" alt="logo" />
         </a>
-        <ul class="nav-list list">
-          <li class="nav-item">
-            <a href="./projects.html">Prosjekter</a>
-          </li>
-          <li class="nav-item">
-            <a href="./about.html">Om oss</a>
-          </li>
-          <li class="nav-item">
-            <a href="./news.html" class="accent-border">Nyheter</a>
-          </li>
-          <li class="nav-item">
-            <a href="./contacts.html">Kontakt</a>
-          </li>
-        </ul>
+
+        <button type="button" class="menu-button js-menu-button" aria-controls="nav-menu">
+          <svg width="45" height="45">
+            <use href="./svg/symbol-defs.svg#menu-button" class="icon-burger"></use>
+            <use href="./svg/symbol-defs.svg#cross" class="icon-cross"></use>
+          </svg>
+        </button>
+
+          <ul class="nav-list list js-nav-list is-hidden" id="nav-menu">
+            <li class="nav-item">
+              <a href="./projects.html">Prosjekter</a>
+            </li>
+            <li class="nav-item">
+              <a href="./about.html">Om oss</a>
+            </li>
+            <li class="nav-item">
+              <a href="./news.html">Nyheter</a>
+            </li>
+            <li class="nav-item">
+              <a href="./contacts.html">Kontakt</a>
+            </li>
+          </ul>
       </div>
     </header>
 
@@ -126,11 +134,12 @@
       </div>
     </div>
 
-    <footer class="footer-conteiner conteiner">
-      <h2 class="second-title">Kontaktinformasjon</h2>
+    <footer class="conteiner">
+      <div class="footer__conteiner">
+        <h2 class="second-title">Kontaktinformasjon</h2>
       <ul class="contacts-list list">
         <li class="contakts-item">
-          <p class="contacts-kind">Addrese</p>
+          <p class="footer__contacts-kind">Addrese</p>
           <address>
             <p>Odin Eiendom</p>
             <p>Lunderingen 1</p>
@@ -139,12 +148,12 @@
           </address>
         </li>
         <li class="contakts-item">
-          <p class="contacts-kind">Telefon</p>
+          <p class="footer__contacts-kind">Telefon</p>
           <p>Ma - fre 10-16</p>
           <a href="tel:45636260" class="contacts-link">45 63 62 60</a>
         </li>
         <li class="contakts-item">
-          <p class="contacts-kind">Mail</p>
+          <p class="footer__contacts-kind">Mail</p>
           <a href="malito:kontakt@odinedom.no" class="contacts-link"
             >kontakt@odinedom.no</a
           >
@@ -152,7 +161,7 @@
       </ul>
       <div class="copyright">
         <p class="copyrigth-paragraph">
-          Copyright 2021 © Moen Eiendom - Org nr: 918712267
+          Copyright 2021 © Moen Eiendom - <span>Org nr: 918712267</span>
         </p>
         <ul class="social-list list">
           <li class="social-item">
@@ -175,6 +184,8 @@
           </li>
         </ul>
       </div>
+      </div>
     </footer>
+    <script src="./js/menuButton.js"></script>
   </body>
 </html>
