--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
           </li>
         </ul>
 
-        <img src="./img/about-house.png" alt="house" />
+        <div class="about__house-img"></div>
 
         <ul class="about__housing-list">
           <li class="about_housing-item">
@@ -102,7 +102,7 @@
               og verktøy.
             </p>
           </li>
-          <li class="about_housing-item">
+          <li class="about_housing-item about_housing-item-desktop">
             <h3>Helhetlig uttrykk h2</h3>
             <p>
               Når vi starter et prosjekt, tar vi utgangspunkt i virksomhetens
@@ -111,7 +111,7 @@
           </li>
         </ul>
 
-        <img src="./img/about-teracce.png" alt="apartment with terrace">
+        <div class="about__teracce-img"></div>
       </div>
       <div class="partners">
         <h3>Våre Samarbeidspartnere</h3>
