contacts  conteiner nobile

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         </li>
       </ul>
       <button class="main-button">
-        Se alle prosjekter
+        Se alle nyheter
         <svg class="arrow-svg" width="26" height="19">
           <use href="./svg/symbol-defs.svg#arrow"></use>
         </svg>
