--- a/projects.html
+++ b/projects.html
@@ -43,13 +43,13 @@
     </div>
     <div class="conteiner projects">
       <ul class="button-list">
-        <li class="button-item switch-border">
+        <li class="button-item switch-border button-item-js">
           <button class="switch-button">Alle</button>
         </li>
-        <li class="button-item">
+        <li class="button-item button-item-js">
           <button class="switch-button">I salg</button>
         </li>
-        <li class="button-item">
+        <li class="button-item button-item-js">
           <button class="switch-button">Kommer for salg</button>
         </li>
       </ul>
@@ -152,5 +152,6 @@
       </div>
     </footer>
     <script src="./js/menuButton.js"></script>
+    <script src="./js/switchButton.js"></script>
   </body>
 </html>
