--- a/contacts.html
+++ b/contacts.html
@@ -141,7 +141,7 @@
           </button>
         </form>
       </div>
-      <div class="partners">
+      <div class="partners contacts__partners">
         <h3>Våre Samarbeidspartnere</h3>
         <ul class="partners__list">
           <li class="partner-item">
