--- a/projectCard.html
+++ b/projectCard.html
@@ -44,7 +44,7 @@
 
     <div class="options-conteiner">
       <div class="conteiner">
-        <div class="carousel">
+        <!-- <div class="carousel">
           <div id="slider-wrapper">
             <input type="radio" id="button-1" name="buttons" checked="checked" />
             <label for="button-1"></label>
@@ -77,7 +77,23 @@
               </ul>
             </div>
           </div>
+        </div> -->
+
+        <div class="carousel-container">
+          <div class="carousel-imgs">
+          <img src="./img/carouselPhoto1.png" class="carousel-img visible"/>
+          <img src="./img/about-apartment.png" class="carousel-img  hidden"/>
+          <img src="./img/about-teracce.png" class="carousel-img  hidden"/>
+          </div>
+            <a class="prev arrow">&#5176;</a>
+            <a class="next arrow">&#5171;</a>
+          
         </div>
+        <div class="carousel-captions">
+          <p class="carousel-caption visible">1/3</p>
+          <p class="carousel-caption hidden">2/3</p>
+          <p class="carousel-caption hidden">3/3</p>
+          </div>
         <h1 class="main-title">Tollskogvegen II – Porsgrunn</h1>
         
 
@@ -329,5 +345,6 @@
       </div>
     </footer>
     <script src="./js/menuButton.js"></script>
+    <script src="./js/carousel.js"></script>
   </body>
 </html>
