--- a/projectCard.html
+++ b/projectCard.html
@@ -18,27 +18,34 @@
           <img class="logo-img" src="/img/Logo1.png" alt="logo" />
         </a>
 
-        <button type="button" class="menu-button js-menu-button" aria-controls="nav-menu">
+        <button
+          type="button"
+          class="menu-button js-menu-button"
+          aria-controls="nav-menu"
+        >
           <svg width="45" height="45">
-            <use href="./svg/symbol-defs.svg#menu-button" class="icon-burger"></use>
+            <use
+              href="./svg/symbol-defs.svg#menu-button"
+              class="icon-burger"
+            ></use>
             <use href="./svg/symbol-defs.svg#cross" class="icon-cross"></use>
           </svg>
         </button>
 
-          <ul class="nav-list list js-nav-list is-hidden" id="nav-menu">
-            <li class="nav-item">
-              <a href="./projects.html">Prosjekter</a>
-            </li>
-            <li class="nav-item">
-              <a href="./about.html">Om oss</a>
-            </li>
-            <li class="nav-item">
-              <a href="./news.html">Nyheter</a>
-            </li>
-            <li class="nav-item">
-              <a href="./contacts.html">Kontakt</a>
-            </li>
-          </ul>
+        <ul class="nav-list list js-nav-list is-hidden" id="nav-menu">
+          <li class="nav-item">
+            <a href="./projects.html">Prosjekter</a>
+          </li>
+          <li class="nav-item">
+            <a href="./about.html">Om oss</a>
+          </li>
+          <li class="nav-item">
+            <a href="./news.html">Nyheter</a>
+          </li>
+          <li class="nav-item">
+            <a href="./contacts.html">Kontakt</a>
+          </li>
+        </ul>
       </div>
     </header>
 
@@ -46,21 +53,21 @@
       <div class="conteiner">
         <div class="carousel-container">
           <div class="carousel-imgs">
-          <img src="./img/carouselPhoto1.png" class="carousel-img visible"/>
-          <img src="./img/about-apartment.png" class="carousel-img  hidden"/>
-          <img src="./img/about-teracce.png" class="carousel-img  hidden"/>
+            <img src="./img/carouselPhoto1.png" class="carousel-img visible" />
+            <img src="./img/about-apartment.png" class="carousel-img hidden" />
+            <img src="./img/about-teracce.png" class="carousel-img hidden" />
           </div>
-            <a class="prev arrow">&#5176;</a>
-            <a class="next arrow">&#5171;</a>
-          
+          <a class="prev arrow">&#5176;</a>
+          <a class="next arrow">&#5171;</a>
         </div>
         <div class="carousel-captions">
           <p class="carousel-caption visible">1/3</p>
           <p class="carousel-caption hidden">2/3</p>
           <p class="carousel-caption hidden">3/3</p>
-          </div>
-        <h1 class="main-title">Tollskogvegen II – Porsgrunn</h1>
-        
+        </div>
+        <h1 class="main-title project__card-title">
+          Tollskogvegen II – Porsgrunn
+        </h1>
 
         <div class="options">
           <div class="price">
@@ -79,46 +86,70 @@
     <div class="description conteiner">
       <ul class="options-list">
         <li class="table-items">
-          <svg class="options-svg" width="41" height="41">
-            <use href="./svg/symbol-defs.svg#options1"></use>
-          </svg>
-          <h5 class="options-title">Areal</h5>
-          <p class="options-text">Fra 82,1 til 100,8 kvadratmeter BRA m²</p>
+          <div class="options-svg">
+            <svg  width="41" height="41">
+              <use href="./svg/symbol-defs.svg#options1"></use>
+            </svg>
+          </div>
+          <div class="options-category">
+            <h5 class="options-title">Areal</h5>
+            <p class="options-text">Fra 82,1 til 100,8 kvadratmeter BRA m²</p>
+          </div>
         </li>
         <li class="table-items">
-          <svg class="options-svg" width="42" height="34">
-            <use href="./svg/symbol-defs.svg#options2"></use>
-          </svg>
-          <h5 class="options-title">Boligtype</h5>
-          <p class="options-text">Leilighet</p>
+          <div class="options-svg">
+            <svg width="42" height="34">
+              <use href="./svg/symbol-defs.svg#options2"></use>
+            </svg>
+          </div>
+          <div class="options-category">
+            <h5 class="options-title">Boligtype</h5>
+            <p class="options-text">Leilighet</p>
+          </div>
         </li>
         <li class="table-items">
-          <svg class="options-svg" width="42" height="34">
-            <use href="./svg/symbol-defs.svg#options3"></use>
-          </svg>
-          <h5 class="options-title">Eierform</h5>
-          <p class="options-text">Borettslag</p>
+          <div class="options-svg">
+            <svg  width="42" height="34">
+              <use href="./svg/symbol-defs.svg#options3"></use>
+            </svg>
+          </div>
+          <div class="options-category">
+            <h5 class="options-title">Eierform</h5>
+            <p class="options-text">Borettslag</p>
+          </div>
         </li>
         <li class="table-items">
-          <svg class="options-svg" width="38" height="38">
-            <use href="./svg/symbol-defs.svg#options4"></use>
-          </svg>
-          <h5 class="options-title">Antall rom</h5>
-          <p class="options-text">3-4</p>
+          <div class="options-svg">
+            <svg  width="38" height="38">
+              <use href="./svg/symbol-defs.svg#options4"></use>
+            </svg>
+          </div>
+          <div class="options-category">
+            <h5 class="options-title">Antall rom</h5>
+            <p class="options-text">3-4</p>
+          </div>
         </li>
         <li class="table-items">
-          <svg class="options-svg" width="50" height="44">
-            <use href="./svg/symbol-defs.svg#options5"></use>
-          </svg>
-          <h5 class="options-title">Antall enheter</h5>
-          <p class="options-text">12</p>
+          <div class="options-svg">
+            <svg  width="50" height="44">
+              <use href="./svg/symbol-defs.svg#options5"></use>
+            </svg>
+          </div>
+          <div class="options-category">
+            <h5 class="options-title">Antall enheter</h5>
+            <p class="options-text">12</p>
+          </div>
         </li>
         <li class="table-items">
-          <svg class="options-svg" width="30" height="44">
-            <use href="./svg/symbol-defs.svg#options6"></use>
-          </svg>
-          <h5 class="options-title">Adresse</h5>
-          <p class="options-text">Tollskogvegen IIPorsgrunn</p>
+          <div class="options-svg"> 
+            <svg  width="30" height="44">
+              <use href="./svg/symbol-defs.svg#options6"></use>
+            </svg>
+          </div>
+          <div class="options-category">
+            <h5 class="options-title">Adresse</h5>
+            <p class="options-text">Tollskogvegen IIPorsgrunn</p>
+          </div>
         </li>
       </ul>
 
@@ -222,7 +253,12 @@
       <div class="conteiner">
         <div class="carousel">
           <div id="slider-wrapper">
-            <input type="radio" id="button-1" name="buttons" checked="checked" />
+            <input
+              type="radio"
+              id="button-1"
+              name="buttons"
+              checked="checked"
+            />
             <label for="button-1"></label>
             <input type="radio" id="button-2" name="buttons" />
             <label for="button-2"></label>
@@ -232,7 +268,7 @@
             <label for="button-4"></label>
             <input type="radio" id="button-5" name="buttons" />
             <label for="button-5"></label>
-  
+
             <div id="slider">
               <ul>
                 <li id="slide1">
@@ -260,53 +296,53 @@
     <footer class="conteiner">
       <div class="footer__conteiner">
         <h2 class="second-title">Kontaktinformasjon</h2>
-      <ul class="contacts-list list">
-        <li class="contakts-item">
-          <p class="footer__contacts-kind">Addrese</p>
-          <address>
-            <p>Odin Eiendom</p>
-            <p>Lunderingen 1</p>
-            <p>3941 Porsgrunn</p>
-            <a href="" class="contacts-link">Kart</a>
-          </address>
-        </li>
-        <li class="contakts-item">
-          <p class="footer__contacts-kind">Telefon</p>
-          <p>Ma - fre 10-16</p>
-          <a href="tel:45636260" class="contacts-link">45 63 62 60</a>
-        </li>
-        <li class="contakts-item">
-          <p class="footer__contacts-kind">Mail</p>
-          <a href="malito:kontakt@odinedom.no" class="contacts-link"
-            >kontakt@odinedom.no</a
-          >
-        </li>
-      </ul>
-      <div class="copyright">
-        <p class="copyrigth-paragraph">
-          Copyright 2021 © Moen Eiendom - <span>Org nr: 918712267</span>
-        </p>
-        <ul class="social-list list">
-          <li class="social-item">
-            <a href=""
-              ><svg class="social-svg" width="21" height="33">
-                <use href="./svg/symbol-defs.svg#facebook"></use></svg
-            ></a>
+        <ul class="contacts-list list">
+          <li class="contakts-item">
+            <p class="footer__contacts-kind">Addrese</p>
+            <address>
+              <p>Odin Eiendom</p>
+              <p>Lunderingen 1</p>
+              <p>3941 Porsgrunn</p>
+              <a href="" class="contacts-link">Kart</a>
+            </address>
           </li>
-          <li class="social-item">
-            <a href=""
-              ><svg class="social-svg" width="21" height="33">
-                <use href="./svg/symbol-defs.svg#linkedin"></use></svg
-            ></a>
+          <li class="contakts-item">
+            <p class="footer__contacts-kind">Telefon</p>
+            <p>Ma - fre 10-16</p>
+            <a href="tel:45636260" class="contacts-link">45 63 62 60</a>
           </li>
-          <li class="social-item">
-            <a href=""
-              ><svg class="social-svg" width="21" height="33">
-                <use href="./svg/symbol-defs.svg#instagram"></use></svg
-            ></a>
+          <li class="contakts-item">
+            <p class="footer__contacts-kind">Mail</p>
+            <a href="malito:kontakt@odinedom.no" class="contacts-link"
+              >kontakt@odinedom.no</a
+            >
           </li>
         </ul>
-      </div>
+        <div class="copyright">
+          <p class="copyrigth-paragraph">
+            Copyright 2021 © Moen Eiendom - <span>Org nr: 918712267</span>
+          </p>
+          <ul class="social-list list">
+            <li class="social-item">
+              <a href=""
+                ><svg class="social-svg" width="21" height="33">
+                  <use href="./svg/symbol-defs.svg#facebook"></use></svg
+              ></a>
+            </li>
+            <li class="social-item">
+              <a href=""
+                ><svg class="social-svg" width="21" height="33">
+                  <use href="./svg/symbol-defs.svg#linkedin"></use></svg
+              ></a>
+            </li>
+            <li class="social-item">
+              <a href=""
+                ><svg class="social-svg" width="21" height="33">
+                  <use href="./svg/symbol-defs.svg#instagram"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
     <script src="./js/menuButton.js"></script>
